# ai-study

./: README.md  pyproject.toml  requirements.txt
tensorflow/: first_tf.py
