[tool.poetry]
name = "ai-study"
version = "0.1.0"
description = ""
authors = ["june <wldnro3141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "2.6.2"
torch = "^1.10.2"
torchvision = "^0.11.3"
torchaudio = "^0.10.2"
pandas = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
